@startuml notion-api-clsd

class GoogleAuthManager {}
class EnvManager {
    get_notion_token()
}
class AppLogger {
    __init__(): ロガーの初期化
    debug()
    info()
    warning()
    error()
    critical()
}

package domain {
    class Task {}
    class ActualTask {}
    class BudgetTask {}
}

class config {}

class TaskApplicationService {
    __init__(self)
    ' タスクの実績工数を予定タスクに反映する
    update_actual_task(tag)
}

TaskApplicationService --> config: 読み込み
TaskApplicationService --> TaskQueryService: 使用

class TaskQueryService {
    __init__(self, token): dbと接続
    get_actual_task(tag): 指定タグの実績工数（人日）を取得
}

@enduml